compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__assert_last.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 303
expression: "pub fn main() {\n  let assert x = 1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
  let assert x = 1
}


----- COMPILED JAVASCRIPT
export function main() {
  let x = 1;
  return x;
}
