compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__calling_fn_literal.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 144
expression: "pub fn main() {\n  fn(x) { x }(1)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() {
  fn(x) { x }(1)
}


----- COMPILED JAVASCRIPT
export function main() {
  return 1;
}
