compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__case_in_call.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 189
expression: "pub fn main(f, x) {\n  f(case x {\n    1 -> 2\n    _ -> 0\n  })\n}\n"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main(f, x) {
  f(case x {
    1 -> 2
    _ -> 0
  })
}


----- COMPILED JAVASCRIPT
export function main(f, x) {
  return f(
    (() => {
      if (x === 1) {
        return 2;
      } else {
        return 0;
      }
    })(),
  );
}
