compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__exported_functions.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 5
expression: "\npub fn add(x, y) {\n    x + y\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub fn add(x, y) {
    x + y
}

----- COMPILED JAVASCRIPT
export function add(x, y) {
  return x + y;
}
