compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__functions__function_formatting3.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/functions.rs
assertion_line: 70
expression: "\npub fn math(x, y) {\n  fn() {\n    x + y\n    x - y\n    2 * x\n  }\n}"
snapshot_kind: text
---
----- SOURCE CODE

pub fn math(x, y) {
  fn() {
    x + y
    x - y
    2 * x
  }
}

----- COMPILED JAVASCRIPT
export function math(x, y) {
  return () => {
    x + y;
    x - y;
    return 2 * x;
  };
}
